# create_excel

./: .gitignore  .pre-commit-config.yaml  Pipfile  constants.py  example.xlsx  main.py  pyproject.toml  pytest.ini
sample/: input.json  input.txt
src/create_excel/: __init__.py  constants.py  main.py
tests/: conftest.py  test_utils.py
tests/resources/: test_input.json
utils/: __init__.py  input_parser.py  utils.py
